Contrast fixes

--- a/src/components/Suntime.css
+++ b/src/components/Suntime.css
@@ -9,12 +9,14 @@
   height: 90%;
   display: flex;
 }
-.suntime-container >.left-column {
+
+.suntime-container > .left-column {
   flex: 1; /* Adjust this value as needed */
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .suntime-container > .right-column {
   flex: 3; /* Adjust this value as needed */
   display: flex;
@@ -23,6 +25,7 @@
   /*padding: px;*/
   /*overflow: hidden;*/
 }
+
 .suntime-container > .right-column p {
   font-size: 1em;
   line-height: 1;
@@ -43,5 +46,6 @@
   color: #34495e; /* Dark blue color for nighttime */
 }
 
-p {
+.makewhite {
+  color: white;
 }
